--- a/demo_board.css
+++ b/demo_board.css
@@ -320,6 +320,7 @@
 .data-popup {
   position: absolute;
   display: none;
+  /* display: block; */
   top: 10%;
   left: 20%;
   z-index: 5;
@@ -447,6 +448,28 @@
   padding-right: 10px;
   border-bottom: 1px solid white;
   border-radius: 10px;
+}
+.popup-body h1{
+  text-align: center;
+  border-bottom: 1px solid white;
+  padding: 10px;
+  margin-bottom: 30px;
+}
+.download{
+  justify-content: space-around;
+}
+.download img{
+  width: 100px;
+}
+.download a{
+  color: white;
+  text-decoration: none;
+}
+#getPDB{
+  padding: 5px 10px;
+  border: 1px solid white;
+  border-radius: 10px;
+  background-color: rgba(255, 255, 255, 0.2);
 }
 
 /* circle */
