--- a/demo_board.css
+++ b/demo_board.css
@@ -461,12 +461,17 @@
 .download img{
   width: 100px;
 }
+.download img:nth-child(1){
+  
+}
 .download a{
   color: white;
   text-decoration: none;
 }
 #getPDB{
   padding: 5px 10px;
+  text-align: center;
+  height: 34px;
   border: 1px solid white;
   border-radius: 10px;
   background-color: rgba(255, 255, 255, 0.2);
