--- a/src/css/news.css
+++ b/src/css/news.css
@@ -6,6 +6,14 @@
 
   box-sizing: border-box;
 }
+.row {
+  display: flex;
+}
+.col {
+  display: flex;
+  flex-direction: column;
+}
+
 .container {
   --g1-angle: 22deg;
   --g2-angle: -67deg;
@@ -33,14 +41,34 @@
   height: 100vh;
 }
 #logo {
-  position: fixed;
   z-index: 5;
   width: 200px;
   margin: 20px;
   cursor: pointer;
 }
 
-.chart{
-    width: 500px;
-    height: 500px;
+.headline {
+  width: 90%;
+  height: 200px;
+  margin: 0 auto;
+  border-radius: 10px;
+  border: 3px solid white;
+  color: white;
+}
+.headline-title {
+  text-align: center;
+  margin: 10px 0;
+}
+
+.headline tr {
+  width: 90%;
+}
+.headline td {
+  width: 30%;
+  text-align: center;
+}
+
+.chart {
+  width: 500px;
+  height: 500px;
 }
