--- a/src/css/news.css
+++ b/src/css/news.css
@@ -15,56 +15,51 @@
 }
 
 .container {
-  --g1-angle: 22deg;
-  --g2-angle: -67deg;
-  margin: 0;
-  overflow: hidden;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  background-image: radial-gradient(
-      circle at center,
-      rgba(0, 0, 0, 0.5),
-      rgba(0, 0, 0, 1)
-    ),
-    linear-gradient(
-      var(--g1-angle),
-      rgba(40, 106, 81, 0.8),
-      rgb(47 83 223 / 80%)
-    ),
-    linear-gradient(
-      var(--g2-angle),
-      rgba(134, 113, 19, 0.8),
-      rgba(59, 165, 45, 0.8)
-    );
   position: relative;
   width: 100%;
   height: 100vh;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
+
+.title-wrapper{
+  justify-content: space-around;
+  height: 10vh;
+}
+.title-wrapper h1{
+ line-height: 100px; 
+ color: rgb(15, 25, 80);
+}
+
 #logo {
   z-index: 5;
-  width: 200px;
+  width: 150px;
   margin: 20px;
   cursor: pointer;
 }
 
 .headline {
   width: 90%;
-  height: 200px;
+  height: 10vh;
   margin: 0 auto;
-  border-radius: 10px;
-  border: 3px solid white;
-  color: white;
+  border-top: 1px solid rgb(15, 25, 80);
+  border-bottom: 1px solid rgb(15, 25, 80);
+  color: rgb(15, 25, 80);
   /* overflow: hidden; */
   text-align: center;
   position: relative;
 }
 
 /* Slides */
+.mySlideDiv a{
+  color: rgb(50, 80, 180);
+  text-decoration-line: none;
+}
 .fade {
   -webkit-animation-name: fade;
   -webkit-animation-duration: 1.5s;
   animation-name: fade;
-  animation-duration: 1.5s;
+  animation-duration: 3s;
 }
 
 @-webkit-keyframes fade {
@@ -94,7 +89,7 @@
   width: auto;
   padding: 16px;
   margin-top: -22px;
-  color: white;
+  color: grey;
   font-weight: bold;
   font-size: 18px;
   transition: 0.6s ease;
@@ -116,43 +111,98 @@
 .main-contents-wrapper{
   margin: 10px auto;
   width: 90%;
-  border: 3px solid white;
-  border-radius: 10px;
-  color: white;
+  height: 70vh;
+  border-top: 1px solid rgb(15, 25, 80);
+  border-bottom: 1px solid rgb(15, 25, 80);
+  color: rgb(10, 20, 70);
+  text-align: center;
+}
+.left{
+  width: 20%;
+}
+.right{
+  width: 80%;
+  position: relative;
+}
+.left th{
+  width: 150px;
+}
+.table-body{
+  width: 100%;
+  overflow: auto;
+  border-top: 1px solid rgb(15, 25, 80);
+}
+.table-body::-webkit-scrollbar {
+  width: 5px;
+}
+.table-body::-webkit-scrollbar-thumb {
+  height: 5%;
+  background-color: rgb(15, 25, 80);
+  border: 1px solid rgb(15, 25, 80);
+  border-radius: 5px;
+}
+.table-body::-webkit-scrollbar-track {
+  border: 5px solid rgba(255, 255, 255, 0);
+  /* background: rgba(255, 255, 255, 0.1); */
+}
+#table1700T td{
+  width: 150px;
+  font-size: small;
+}
+
+.right-1{
+  width: 100%;
+  height: 50%;
   justify-content: space-around;
 }
-
-.contents-2{
-  width: 60%;
+.family{
+  width: 45%;
 }
-
-.contents-2-1{
-  width: 50%;
+.apo{
+  width: 45%;
+  position: relative;
 }
-.contents-2-2{
-  width: 50%;
+.apo-1{
+  position: absolute;
+  width: 100%;
+  height: 100%;
 }
-#myChart-1{
-  width: 40%;
-  height: 40%;
+.apo-2{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: none;
 }
-#myChart-2{
-  width: 40%;
-  height: 40%;
+.apo-3{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: none;
 }
-#myChart-3{
-  width: 40%;
-  height: 40%;
+.canvasprev{
+  position: absolute;
+  top: 40%;
+  left: 10px;
+  cursor: pointer;
 }
-#myChart-4{
-  width: 40%;
-  height: 40%;
+.canvasnext{
+  position: absolute;
+  top: 40%;
+  right: 10px;
+  cursor: pointer;
+}
+.right-2{
+  width: 100%;
+  height: 50%;
+  background-color: skyblue;
 }
 
 .footer{
-  color: white;
+  height: 7vh;
+  color: rgb(15, 25, 80);
   text-align: center;
 }
 .footer p{
   font-size: 7px;
+  color: rgb(15, 25, 80);
 }
