--- a/src/css/news.css
+++ b/src/css/news.css
@@ -191,11 +191,62 @@
   right: 10px;
   cursor: pointer;
 }
+
+/* search */
+.search-wrapper{
+  justify-content: space-around;
+}
+.search{
+  width: 100%;
+}
+.search input{
+  width: 50%;
+  height: 20px;
+}
+.search button{
+  width: 60px;
+  height: 20px;
+}
+/* list */
 .right-2{
   width: 100%;
   height: 50%;
-  background-color: skyblue;
+  /* background-color: skyblue; */
 }
+.search-wrapper{
+  width: 100%;
+  height: 15%;
+}
+.list-wrapper{
+  width: 100%;
+  height: 85%;
+}
+.table-head-2 th{
+  width: 120px
+}
+.table-body-2{
+  width: 100%;
+  overflow: auto;
+  border-top: 1px solid rgb(15, 25, 80);
+  font-size: small;
+}
+.table-body-2::-webkit-scrollbar {
+  width: 5px;
+}
+.table-body-2::-webkit-scrollbar-thumb {
+  height: 5%;
+  background-color: rgb(15, 25, 80);
+  border: 1px solid rgb(15, 25, 80);
+  border-radius: 5px;
+}
+.table-body-2::-webkit-scrollbar-track {
+  border: 5px solid rgba(255, 255, 255, 0);
+  /* background: rgba(255, 255, 255, 0.1); */
+}
+.table-body-2 td{
+  width: 120px;
+}
+
 
 .footer{
   height: 7vh;
