--- a/src/css/news_scroll.css
+++ b/src/css/news_scroll.css
@@ -4,118 +4,587 @@
   padding: 0;
   box-sizing: border-box;
 }
-.row{
-    display: flex;
+.row {
+  display: flex;
 }
-.col{
-    display: flex;
-    flex-direction: column;
-}
-
-.container{
-    position: relative;
+.col {
+  display: flex;
+  flex-direction: column;
 }
 
-.navigator{
-    width: 100%;
-    height: 100px;
-    background-color: rgba(0, 0, 0, 0.1);
-    position: fixed;
-    justify-content: space-between;
-}
-.navigator img{
-    width: 200px;
-    height: 45px;
-    margin: 20px;
-}
-.navigator h1{
-    text-align: center;
-    line-height: 90px;
-}
-.navigator a{
-    text-align: center;
-    line-height: 90px;
-    margin-right: 30px;
-    text-decoration: none;
-    color: black;
-
+.container {
+  position: relative;
+  /* background-color: blue; */
 }
 
+.navigator {
+  width: 100%;
+  height: 10vh;
+  /* background-color: rgba(20, 180, 240, 0.2); */
+  /* background: linear-gradient(skyblue, rgb(200, 200, 200)); */
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(255, 255, 255, 0.5));
+  position: fixed;
+  justify-content: space-between;
+  color: white;
+  z-index: 1;
+}
+.navigator img {
+  width: 150px;
+  height: 30px;
+  margin: 30px;
+}
+.navigator h1 {
+  text-align: center;
+  line-height: 90px;
+  font-size: 50px;
+  letter-spacing: 3px;
+  /* font-family: 'Times New Roman', Times, serif; */
+}
+.observer{
+  width: 15%;
+  font-size: 70px;
+  text-align: right;
+}
+.observer p{
+  cursor: pointer;
+}
 .section {
   width: 100%;
   height: 100vh;
+  position: relative;
+}
+/* page 1 */
+/* Video */
+.page-1 {
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
+  margin: 0px auto;
+  position: absolute;
+  /* background: linear-gradient(to top, #fff, #fff 10%, transparent); */
+  /* background: radial-gradient( skyblue, white ); */
+  background: radial-gradient(
+    circle at 50% 60%,
+    black,
+    rgba(11, 39, 65, 0.32) 60%,
+    black
+  );
+}
+video {
+  width: 100%;
+  opacity: 0.3;
+  z-index: -2;
+}
+.summary-text {
+  position: absolute;
+  top: 20%;
+  width: 100%;
+}
+.summary-text h1 {
+  /* border-bottom: 1px solid white; */
+  text-align: center;
+  font-size: 48px;
+  font-weight: 500;
+  color: #ffffff;
+}
+.summary-text h2 {
+  text-align: center;
+  font-size: 30px;
+  font-weight: 500;
+  color: #ffffff;
+  border-top: 1px solid white;
+}
+.summary-text p {
+  margin-top: 15px;
+  text-align: center;
+  font-size: 17px;
+  font-weight: 100;
+  color: #ffffff;
+  line-height: 30px;
 }
 
 /* headline slide */
+.headline-wrapper {
+  width: 100%;
+  bottom: 0;
+  position: absolute;
+}
 .headline {
-    width: 90%;
-    height: 10vh;
-    margin: 0 auto;
-    border-top: 1px solid rgb(15, 25, 80);
-    border-bottom: 1px solid rgb(15, 25, 80);
-    color: rgb(15, 25, 80);
-    /* overflow: hidden; */
-    text-align: center;
-    position: relative;
+  z-index: 2;
+  width: 100%;
+  height: 10vh;
+  margin: 0 auto;
+  /* color: rgb(15, 25, 80); */
+  color: white;
+  /* overflow: hidden; */
+  text-align: center;
+  position: absolute;
+  bottom: 0;
+  /* background: linear-gradient(rgb(200, 200, 200),skyblue); */
+  background: linear-gradient(rgba(255, 255, 255, 0.5, rgba(0, 0, 0, 0.5)));
+}
+
+/* Slides */
+.mySlideDiv h1 {
+  margin-top: 10px;
+}
+.mySlideDiv a {
+  /* color: rgb(50, 80, 180); */
+  color: white;
+  text-decoration-line: none;
+}
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 3s;
+}
+
+@-webkit-keyframes fade {
+  from {
+    opacity: 0.4;
   }
-  
-  /* Slides */
-  .mySlideDiv{
-    margin-top: 200px;
+  to {
+    opacity: 1;
   }
-  .mySlideDiv a{
-    color: rgb(50, 80, 180);
-    text-decoration-line: none;
+}
+
+@keyframes fade {
+  from {
+    opacity: 0.4;
   }
-  .fade {
-    -webkit-animation-name: fade;
-    -webkit-animation-duration: 1.5s;
-    animation-name: fade;
-    animation-duration: 3s;
+  to {
+    opacity: 1;
   }
-  
-  @-webkit-keyframes fade {
-    from {
-      opacity: 0.4;
-    }
-    to {
-      opacity: 1;
-    }
+}
+
+/* Next & previous buttons */
+.prev,
+.next {
+  cursor: pointer;
+  position: absolute;
+  top: 60%;
+  width: auto;
+  padding: 16px;
+  margin-top: -22px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover,
+.next:hover {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+/* ************************************** */
+/* Page 2 */
+/* Data Table */
+.main {
+  background-color: grey;
+  /* display: none; */
+  width: 100%;
+  height: 100vh;
+  position: absolute;
+  color: white;
+  font-family: "Quicksand", sans-serif;
+  /* background: linear-gradient(45deg, rgb(37, 39, 46), rgb(140, 140, 158), rgb(13, 18, 44)); */
+  background: radial-gradient(
+    circle at 50% 60%,
+    black,
+    rgba(11, 39, 65, 1) 60%,
+    black
+  );
+}
+/* search bar */
+.search-bar {
+  width: 90%;
+  justify-content: center;
+  margin-top: 100px;
+  margin-left: 7%;
+  height: 13vh;
+  z-index: 3;
+}
+.search-bar input {
+  z-index: 5;
+  text-align: center;
+  width: 50%;
+  height: 50px;
+  margin-right: 20px;
+  color: grey;
+  border-radius: 10px;
+  border-color: white;
+  outline: none;
+}
+.search-bar button {
+  z-index: 5;
+  width: 100px;
+  height: 50px;
+  background-color: white;
+  border-radius: 10px;
+  border: 1px solid gray;
+  color: grey;
+  cursor: pointer;
+}
+.search-bar button:hover {
+  transition: 0.2s;
+  transform: scale(1.05);
+}
+
+/* data */
+.data-wrapper {
+  z-index: 3;
+  width: 100%;
+  height: 80vh;
+  justify-content: space-around;
+  position: relative;
+}
+.option{
+  margin-top: 20px;
+}
+.option-wrapper {
+  width: 15%;
+  height: 90%;
+  background-color: rgba(255, 255, 255, 0.3);
+  border-radius: 10px;
+  text-align: center;
+  position: relative;
+}
+.option-wrapper h1 {
+  font-size: 25px;
+  margin-top: 10px;
+}
+.option-wrapper p {
+  font-size: 20px;
+  font-weight: 800;
+  margin-top: 10px;
+  margin-bottom: 5px;
+  letter-spacing: 1px;
+}
+.option-wrapper input {
+  position: absolute;
+  right: 20px;
+  margin-top: 5px;
+  z-index: 3;
+}
+.option-wrapper input:hover {
+  transform: scale(1.1);
+}
+.box-wrapper{
+  /* justify-content: space-between; */
+  padding-right: 50px;
+  padding-left: 15px;
+  padding-top: 10px;
+  width: 100%;
+}
+.box-wrapper h5{
+  margin-right: 3px;
+}
+.hide {
+  text-align: left;
+  position: absolute;
+  left: 20px;
+  bottom: 40px;
+}
+.hide * {
+  margin: 10px;
+  cursor: pointer;
+  z-index: 3;
+}
+.hide *:hover {
+  transform: scale(1.1);
+}
+.main-wrapper {
+  width: 80%;
+  height: 100%;
+}
+
+.table-wrapper {
+  width: 100%;
+  height: 80%;
+  background-color: rgba(255, 255, 255, 0.3);
+  border-radius: 10px;
+  z-index: 3;
+}
+.table-wrapper table {
+  width: 94%;
+  margin-left: 3%;
+  margin-top: 30px;
+  text-align: center;
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+.table-header {
+  margin-right: 15px;
+}
+.table-body {
+  overflow: auto;
+  margin-right: 5px;
+}
+.table-body::-webkit-scrollbar {
+  width: 10px;
+}
+.table-body::-webkit-scrollbar-thumb {
+  height: 10%;
+  background-color: white;
+  border: 1px solid white;
+  border-radius: 10px;
+}
+.table-body::-webkit-scrollbar-track {
+  border: 5px solid rgba(255, 255, 255, 0);
+  /* background: rgba(255, 255, 255, 0.1); */
+}
+.table-body tr:hover {
+  background-color: rgba(255, 255, 255, 0.1);
+}
+.table-header th {
+  width: 10%;
+}
+.table-wrapper thead {
+  border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+}
+.table-wrapper td {
+  width: 10%;
+  z-index: 5;
+  height: auto;
+  font-size: 12px;
+  cursor: pointer;
+  /* border: 1px solid white; */
+  /* background-color: green; */
+}
+/* .table-wrapper td:hover{
+  background-color: rgba(255, 255, 255, 0.1);
+} */
+.table-wrapper tr {
+  height: 30px;
+}
+.table-wrapper td {
+  /* border-bottom: 1px dotted rgba(255, 255, 255, 0.5); */
+  border-bottom: 1px dashed rgba(255, 255, 255, 0.5);
+  z-index: 5;
+}
+/* .pagination {
+  width: 20%;
+  margin: 0 40%;
+  margin-bottom: 20px;
+  justify-content: space-around;
+}
+.pagination a {
+  color: white;
+  text-decoration: none;
+  cursor: pointer;
+  z-index: 3;
+} */
+
+
+
+/* ************************* */
+/* Popup */
+.data-popup {
+  position: absolute;
+  display: none;
+  /* display: block; */
+  top: 10%;
+  left: 20%;
+  z-index: 5;
+  width: 40%;
+  height: 60%;
+  background-image: radial-gradient(
+      circle at center,
+      rgba(0, 0, 0, 0.5),
+      rgba(0, 0, 0, 1)
+    ),
+    linear-gradient(
+      var(--g1-angle),
+      rgba(40, 106, 81, 0.8),
+      rgb(47 83 223 / 80%)
+    ),
+    linear-gradient(
+      var(--g2-angle),
+      rgba(134, 113, 19, 0.8),
+      rgba(59, 165, 45, 0.8)
+    );
+  border-radius: 20px;
+  border: 1px solid white;
+}
+.popup-loading {
+  display: none;
+  width: 100%;
+  z-index: 5;
+  color: white;
+  position: absolute;
+  top: 40%;
+  margin-left: 40px;
+  text-align: center;
+}
+.popup-loading span {
+  font-size: 50px;
+  letter-spacing: 100px;
+  display: inline-block;
+  animation: popup-loading 0.3s infinite;
+}
+.popup-loading span:nth-child(1) {
+  animation-delay: 0s;
+}
+.popup-loading span:nth-child(2) {
+  animation-delay: 0.1s;
+}
+.popup-loading span:nth-child(3) {
+  animation-delay: 0.2s;
+}
+
+@keyframes popup-loading {
+  0%,
+  100% {
+    transform: translateY(0);
   }
-  
-  @keyframes fade {
-    from {
-      opacity: 0.4;
-    }
-    to {
-      opacity: 1;
-    }
+  50% {
+    transform: translateY(15px);
   }
-  
-  /* Next & previous buttons */
-  .prev,
-  .next {
-    cursor: pointer;
-    position: absolute;
-    top: 240%;
-    width: auto;
-    padding: 16px;
-    margin-top: -22px;
-    color: grey;
-    font-weight: bold;
-    font-size: 18px;
-    transition: 0.6s ease;
-    border-radius: 0 3px 3px 0;
-  }
-  
-  /* Position the "next button" to the right */
-  .next {
-    right: 0;
-    border-radius: 3px 0 0 3px;
-  }
-  
-  /* On hover, add a black background color with a little bit see-through */
-  .prev:hover,
-  .next:hover {
-    background-color: rgba(0, 0, 0, 0.8);
-  }
+}
+.popup-header {
+  height: 5%;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+  /* background-color: green; */
+}
+.popup-close {
+  width: 20px;
+  height: 20px;
+  /* background-color: red; */
+  cursor: pointer;
+  border-radius: 100%;
+}
+.popup-close img{
+  width: 130%;
+  height: 130%;
+}
+.popup-body {
+  display: none;
+  width: 96%;
+  margin: 2%;
+  height: 90%;
+  color: white;
+  overflow: auto;
+  /* border-collapse: collapse;
+  border-spacing: 0; */
+}
+.popup-body::-webkit-scrollbar {
+  width: 10px;
+}
+.popup-body::-webkit-scrollbar-thumb {
+  height: 10%;
+  background-color: white;
+  border: 1px solid white;
+  border-radius: 10px;
+}
+.popup-body::-webkit-scrollbar-track {
+  border: 5px solid rgba(255, 255, 255, 0);
+  /* background: rgba(255, 255, 255, 0.1); */
+}
+.popup-item{
+  justify-content: space-between;
+}
+.popup-body span{
+  margin: 15px;
+}
+.popup-body input{
+  width: 70%;
+  height: 30px;
+  margin: 10px;
+  background: none;
+  color: white;
+  /* text-align: center; */
+  text-align: right;
+  padding-right: 10px;
+  /* border-radius: 10px; */
+  letter-spacing: 2px;
+  border: none;
+  border-bottom: 1px solid white;
+}
+.popup-body p{
+  width: 70%;
+  height: 60px;
+  margin: 10px;
+  text-align: right;
+  padding-right: 10px;
+  border-bottom: 1px solid white;
+  border-radius: 10px;
+}
+.popup-body h1{
+  text-align: center;
+  border-bottom: 1px solid white;
+  padding: 10px;
+  margin-bottom: 30px;
+}
+.download{
+  justify-content: space-around;
+}
+.download img{
+  width: 100px;
+  height: 40px;
+}
+.download a{
+  color: white;
+  text-decoration: none;
+}
+#getPDB{
+  padding: 5px 10px;
+  text-align: center;
+  height: 34px;
+  border: 1px solid white;
+  border-radius: 10px;
+  background-color: rgba(255, 255, 255, 0.2);
+}
+
+
+/* ************************************** */
+/* Page 3 */
+/* Data Table */
+.page-3 {
+  width: 100%;
+  height: 100vh;
+  padding-top: 100px;
+  position: absolute;
+  color: white;
+  font-family: "Quicksand", sans-serif;
+  /* background: linear-gradient(45deg, rgb(37, 39, 46), rgb(140, 140, 158), rgb(13, 18, 44)); */
+  background: radial-gradient(
+    circle at 50% 60%,
+    black,
+    rgba(11, 39, 65, 1) 60%,
+    black
+  )
+}
+.title-3{
+  text-align: center;
+  margin-bottom: 50px;
+}
+.chart-wrapper{
+  justify-content: space-around;
+}
+.chart-1-wrapper{
+  width: 30%;
+  height: 400px;
+  /* background-color: white; */
+}
+.chart-2-wrapper{
+  width: 30%; 
+  height: 400px;
+  background-color: white;
+}
+.chart-3-wrapper{
+  width: 30%; 
+  height: 400px;
+  background-color: white;
+}
