--- a/src/css/news_scroll.css
+++ b/src/css/news_scroll.css
@@ -79,6 +79,7 @@ video {
   position: absolute;
   top: 20%;
   width: 100%;
+  font-family: 'Gothic A1', sans-serif;
 }
 .summary-text h1 {
   /* border-bottom: 1px solid white; */
@@ -92,7 +93,7 @@ video {
   font-size: 30px;
   font-weight: 500;
   color: #ffffff;
-  border-top: 1px solid white;
+  /* border-top: 1px solid white; */
 }
 .summary-text p {
   margin-top: 15px;
@@ -101,6 +102,7 @@ video {
   font-weight: 100;
   color: #ffffff;
   line-height: 30px;
+  letter-spacing: 1px;
 }
 
 /* headline slide */
@@ -190,7 +192,7 @@ video {
 /* Page 2 */
 /* Data Table */
 .main {
-  background-color: grey;
+  /* background-color: grey; */
   /* display: none; */
   width: 100%;
   height: 100vh;
@@ -545,6 +547,10 @@ video {
   border: 1px solid white;
   border-radius: 10px;
   background-color: rgba(255, 255, 255, 0.2);
+}
+
+.bottom p{
+  text-align: center;
 }
 
 
