--- a/src/css/news_scroll.css
+++ b/src/css/news_scroll.css
@@ -69,6 +69,7 @@
     rgba(11, 39, 65, 0.32) 60%,
     black
   );
+  background-position: center;
 }
 video {
   width: 100%;
@@ -198,7 +199,8 @@ video {
   height: 100vh;
   position: absolute;
   color: white;
-  font-family: "Quicksand", sans-serif;
+  /* font-family: "Quicksand", sans-serif; */
+  font-family: 'Gothic A1', sans-serif;
   /* background: linear-gradient(45deg, rgb(37, 39, 46), rgb(140, 140, 158), rgb(13, 18, 44)); */
   background: radial-gradient(
     circle at 50% 60%,
@@ -226,6 +228,7 @@ video {
   border-radius: 10px;
   border-color: white;
   outline: none;
+  font-family: 'Gothic A1', sans-serif;
 }
 .search-bar button {
   z-index: 5;
@@ -236,6 +239,7 @@ video {
   border: 1px solid gray;
   color: grey;
   cursor: pointer;
+  font-family: 'Gothic A1', sans-serif;
 }
 .search-bar button:hover {
   transition: 0.2s;
@@ -264,12 +268,16 @@ video {
 .option-wrapper h1 {
   font-size: 25px;
   margin-top: 10px;
+  letter-spacing: 2px;
 }
 .option-wrapper p {
   font-size: 20px;
   font-weight: 800;
   margin-top: 10px;
   margin-bottom: 5px;
+  letter-spacing: 2px;
+}
+.option-wrapper h5{
   letter-spacing: 1px;
 }
 .option-wrapper input {
@@ -359,6 +367,7 @@ video {
   z-index: 5;
   height: auto;
   font-size: 12px;
+  font-family: 'Gothic A1', sans-serif;
   cursor: pointer;
   /* border: 1px solid white; */
   /* background-color: green; */
@@ -563,7 +572,8 @@ video {
   padding-top: 100px;
   position: absolute;
   color: white;
-  font-family: "Quicksand", sans-serif;
+  /* font-family: "Quicksand", sans-serif; */
+  font-family: 'Gothic A1', sans-serif;
   /* background: linear-gradient(45deg, rgb(37, 39, 46), rgb(140, 140, 158), rgb(13, 18, 44)); */
   background: radial-gradient(
     circle at 50% 60%,
