--- a/src/css/news_scroll.css
+++ b/src/css/news_scroll.css
@@ -29,9 +29,9 @@
   z-index: 1;
 }
 .navigator img {
-  width: 150px;
-  height: 30px;
-  margin: 30px;
+  width: 200px;
+  height: 200px;
+  margin-top: -50px;
 }
 .navigator h1 {
   text-align: center;
@@ -81,6 +81,14 @@ video {
   top: 20%;
   width: 100%;
   font-family: 'Gothic A1', sans-serif;
+}
+.summary-text img{
+  width: 200px;
+}
+.summary-text h1 img{
+  width: 500px;
+  margin-top: -300px;
+  margin-bottom: -250px;
 }
 .summary-text h1 {
   /* border-bottom: 1px solid white; */
