--- a/html/css/news.css
+++ b/html/css/news.css
@@ -63,8 +63,58 @@ video {
   letter-spacing: 0.1em;
 }
 .rrd-text h3 {
-  margin: 30px 0;
+  /* margin: 30px 0; */
   text-align: center;
+}
+.rrd-text {
+  position: relative;
+  width: 60%;
+}
+.process {
+  width: 100px;
+  height: 50px;
+  margin: 0 auto;
+  cursor: pointer;
+  border-radius: 5px;
+  background: radial-gradient(
+    circle,
+    rgba(0, 0, 0, 0.4) 0%,
+    rgba(59, 87, 121, 0.4) 100%
+  );
+  border: none;
+  text-align: center;
+  overflow: hidden;
+}
+.process h3{
+    font-size: 17px;
+}
+.process h5{
+    font-size: 10px;
+    font-weight: 100;
+}
+.process:hover {
+  width: 500px;
+  height: 160px;
+  margin: 0 auto;
+  cursor: pointer;
+  border-radius: 5px;
+  background: radial-gradient(
+    circle,
+    rgba(0, 0, 0, 0.4) 0%,
+    rgba(59, 87, 121, 0.4) 100%
+  );
+  border: none;
+}
+.process:hover .process-hide {
+    display: block;
+}
+.process-hide {
+    display: none;
+}
+.process-hide p{
+    margin-top: 10px;
+    font-size: 10px;
+    line-height: 25px;
 }
 
 .title {
@@ -80,7 +130,8 @@ video {
 
 /* effect */
 .effect {
-  width: 90%;
+  width: 100%;
+  height: 200px;
   background-color: rgba(255, 255, 255, 0.1);
   justify-content: space-around;
   text-align: center;
@@ -93,6 +144,20 @@ video {
   font-family: Lato;
   line-height: 1.6em;
   letter-spacing: 0.1em;
+}
+.effect h2 {
+  font-size: 20px;
+  font-weight: 400;
+}
+.effect p {
+  font-size: 12px;
+  font-weight: 100;
+}
+.effect-add {
+  width: 50%;
+}
+.effect-adsp {
+  width: 50%;
 }
 
 /* data table */
