--- a/html/css/index.css
+++ b/html/css/index.css
@@ -80,13 +80,21 @@ video {
   letter-spacing: 0.1em;
 }
 .summary-text p {
+  width: 50%;
+  padding: 20px;
+  background: radial-gradient(
+    circle,
+    rgba(0, 0, 0, 0.4) 0%,
+    rgba(59, 87, 121, 0.4) 100%
+  );
+  border-radius: 10px;
   margin-top: 20px;
   font-weight: 300;
-  font-size: 1em;
+  font-size: 14px;
   text-transform: uppercase;
   font-family: Lato;
   line-height: 1.6em;
-  letter-spacing: 0.1em;
+  letter-spacing: 3px;
 }
 .custom-btn {
   height: 40px;
