--- a/html/css/news.css
+++ b/html/css/news.css
@@ -125,6 +125,7 @@ video {
 .chart-1-wrapper {
   width: 400px;
   height: 200px;
+  margin-top: 50px;
   /* background-color: white; */
 }
 
@@ -168,6 +169,7 @@ video {
   background-color: rgba(255, 255, 255, 0.1);
   border-radius: 10px;
   padding: 10px;
+  z-index: 1;
 }
 .rrd-data h2 {
   margin-bottom: 5px;
@@ -315,6 +317,7 @@ video {
   cursor: pointer;
   position: relative;
   overflow: hidden;
+  margin-bottom: 10px;
 }
 .something a {
   height: 30px;
@@ -361,4 +364,50 @@ video {
   width: 25%;
   height: 100%;
   background-color: black;
+}
+.QnA {
+  width: 240px;
+  height: 40px;
+  /* justify-content: space-between; */
+  border: 1px solid white;
+  background: radial-gradient(
+    circle,
+    rgba(0, 0, 0, 0.4) 0%,
+    rgba(59, 87, 121, 0.4) 100%
+  );
+  padding: 5px;
+  border-radius: 10px;
+  cursor: pointer;
+  position: relative;
+  overflow: hidden;
+}
+.QnA a {
+  /* width: 100%; */
+  height: 30px;
+  padding: 2px;
+  text-decoration: none;
+  color: white;
+  font-size: 13px;
+  /* text-align: center; */
+}
+.QnA:hover {
+  width: 500px;
+  cursor: pointer;
+  border-radius: 5px;
+  background: radial-gradient(
+    circle,
+    rgba(0, 0, 0, 0.4) 0%,
+    rgba(59, 87, 121, 0.4) 100%
+  );
+  border: 1px solid white;
+}
+.QnA:hover .QnA-hide {
+  display: block;
+}
+.QnA-hide {
+  display: none;
+}
+.QnA-hide p{
+  font-size: 5px;
+  margin-left: 50px;
 }
