--- a/html/css/news.css
+++ b/html/css/news.css
@@ -24,7 +24,7 @@
   background: radial-gradient(
     circle at 50% 50%,
     black,
-    rgba(11, 39, 65, 0.32) 60%,
+    rgba(19, 131, 175, 0.3) 60%,
     black
   );
   background-position: center;
@@ -410,4 +410,16 @@ video {
 .QnA-hide p{
   font-size: 5px;
   margin-left: 50px;
+}
+.QnA-popup{
+  display: none;
+  position: absolute;
+  width: 300px;
+  height: 300px;
+  background-color: black;
+  opacity: 0.7;
+  border: 1px solid white;
+  border-radius: 10px;
+  z-index: 3;
+  bottom: 0;
 }
