--- a/html/css/news.css
+++ b/html/css/news.css
@@ -125,14 +125,14 @@ video {
 .main-chart-wrapper {
   width: 400px;
   height: 200px;
-  margin-top: 50px;
+  /* margin-top: 50px; */
   /* background-color: white; */
 }
 
 /* effect */
 .effect {
   width: 100%;
-  height: 200px;
+  height: 140px;
   background-color: rgba(255, 255, 255, 0.1);
   justify-content: space-around;
   text-align: center;
@@ -143,7 +143,7 @@ video {
   border-radius: 10px;
   text-transform: uppercase;
   font-family: Lato;
-  line-height: 1.6em;
+  line-height: 16px;
   letter-spacing: 0.1em;
 }
 .effect h2 {
@@ -165,7 +165,7 @@ video {
 .rrd-data {
   margin: 30px auto;
   width: 95%;
-  height: 30vh;
+  height: 35vh;
   background-color: rgba(255, 255, 255, 0.1);
   border-radius: 10px;
   padding: 10px;
@@ -177,8 +177,25 @@ video {
 }
 .rrd-data th {
   table-layout: fixed;
-  width: 16%;
   border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+}
+.rrd-data th:nth-child(1){
+  width: 12%;
+}
+.rrd-data th:nth-child(2){
+  width: 12%;
+}
+.rrd-data th:nth-child(3){
+  width: 12%;
+}
+.rrd-data th:nth-child(4){
+  width: 12%;
+}
+.rrd-data th:nth-child(5){
+  width: 40%;
+}
+.rrd-data th:nth-child(6){
+  width: 12%;
 }
 .rrd-data td {
   /* border: 1px solid white; */
@@ -193,8 +210,26 @@ video {
   width: 100%;
 }
 #rrd-data-data td {
-  font-size: 3px;
+  font-size: 14px;
   text-align: center;
+}
+#rrd-data-data td:nth-child(1){
+  width: 12%;
+}
+#rrd-data-data td:nth-child(2){
+  width: 12%;
+}
+#rrd-data-data td:nth-child(3){
+  width: 12%;
+}
+#rrd-data-data td:nth-child(4){
+  width: 12%;
+}
+#rrd-data-data td:nth-child(5){
+  width: 40%;
+}
+#rrd-data-data td:nth-child(6){
+  width: 12%;
 }
 /* scroll */
 .rrd-table-wrapper {
