--- a/html/css/news.css
+++ b/html/css/news.css
@@ -56,6 +56,7 @@ video {
 }
 
 .rrd-text-wrapper {
+  width: 95%;
   justify-content: space-around;
   text-transform: uppercase;
   font-family: Lato;
